# kicker_bot

./: .env  .env.dist  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-test.yml  docker-compose.yml  pyproject.toml  requirements.txt  start_bot.py
buildfiles/: Dockerfile  redis.conf
migrations/: env.py
migrations/versions/: 38ff49c2799d_initial_check1.py
src/: configuration.py
src/bot/: __main__.py
src/bot/structures/: data_structure.py
src/db/: __init__.py  database.py
src/db/models/: __init__.py  base.py  chat.py  user.py
src/db/repositories/: abstract.py  chat.py  user.py
