[tool.poetry]
name = "kicker-bot"
version = "0.1.0"
description = ""
authors = ["sid2503 <yaroslav.dvoinyh@gmail.com>"]
readme = "README.md"
packages = [{include = "kicker_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0b6"
redis = "^5.0.0"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
alembic = "^1.9.2"
certifi = "^2023.7.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
